# thedate

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile
src/: config.rs  handlers.rs  lib.rs  main.rs  timestamp.rs
tests/: integration_test.rs
